Rework done - creating auto logs