@@ -1,6 +1,7 @@
 package fr.AleksGirardey.Objects.CommandElements;
 
 import fr.AleksGirardey.Objects.Core;
+import fr.AleksGirardey.Objects.DBObject.DBPlayer;
 import fr.AleksGirardey.Objects.War.PartyWar;
 import org.spongepowered.api.command.CommandSource;
 import org.spongepowered.api.command.args.ArgumentParseException;
@@ -14,6 +15,7 @@ import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ElementParty extends CommandElement {
     public ElementParty(@Nullable Text key) {
@@ -22,16 +24,16 @@ public class ElementParty extends CommandElement {
 
     @Nullable
     @Override
-    protected Object parseValue(CommandSource commandSource, CommandArgs commandArgs) throws ArgumentParseException {
+    protected Object    parseValue(CommandSource commandSource, CommandArgs commandArgs) throws ArgumentParseException {
         if (commandSource instanceof Player) {
-            Player player = (Player) commandSource;
+            DBPlayer    player = Core.getPlayerHandler().get((Player) commandSource);
 
             if (!Core.getPartyHandler().isLeader(player))
                 throw commandArgs.createError(Text.of("you need to be leader of a party"));
             PartyWar    party = Core.getPartyHandler().getPartyFromLeader(player);
             String      name = commandArgs.next();
-            for (Player p : party.toList())
-                if (Core.getPlayerHandler().<String>getElement(p, "player_displayName").equals(name))
+            for (DBPlayer p : party.toList())
+                if (p.getDisplayName().equals(name))
                     return p;
         }
         throw commandArgs.createError(Text.of(commandArgs + " is not a valid member"));
@@ -40,16 +42,10 @@ public class ElementParty extends CommandElement {
     @Override
     public List<String> complete(CommandSource commandSource, CommandArgs commandArgs, CommandContext commandContext) {
         if (commandSource instanceof Player) {
-            Player player = (Player) commandSource;
+            DBPlayer player = Core.getPlayerHandler().get((Player) commandSource);
 
-            if (Core.getPartyHandler().isLeader(player)) {
-                List<String> players = new ArrayList<>();
-
-                for (Player p : Core.getPartyHandler().getPartyFromLeader(player).toList())
-                    if (p != player)
-                        players.add(Core.getPlayerHandler().<String>getElement(p, "player_displayName"));
-                return players;
-            }
+            if (Core.getPartyHandler().isLeader(player))
+                return Core.getPartyHandler().getPartyFromLeader(player).toList().stream().filter(p -> p != player).map(DBPlayer::getDisplayName).collect(Collectors.toList());
         }
         return Collections.emptyList();
     }
